/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
package org.apache.flink.formats.protobuf.proto;
option java_multiple_files = true;

message SimpleTestNoJavaPackage {
  optional int32 a = 1 [default = 10];
  optional int64 b = 2 [default = 100];
  optional bool c = 3;
  optional float d = 4;
  optional double e = 5;
  optional string f = 6 [default = "f"];
  optional bytes g = 7;
  optional Corpus h = 8;
  //this is must because protobuf have some field name parse bug if number is after "_".
  optional int32 f_abc_7d = 9;

  enum Corpus {
    UNIVERSAL = 0;
    WEB = 1;
    IMAGES = 2;
    LOCAL = 3;
    NEWS = 4;
    PRODUCTS = 5;
    VIDEO = 7;
  }
}
